# Copyright 2020 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoDeps.java",
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoManager.java",
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoMetrics.java",
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoUtils.java",

    # Ecosia
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/EcosiaDefaultBrowserPromoDialog.java",
  ]
  deps = [
    "//base:base_java",
    "//chrome/browser/android/lifecycle:java",
    "//chrome/browser/flags:java",
    "//chrome/browser/preferences:java",
    "//chrome/browser/profiles/android:java",
    "//third_party/androidx:androidx_annotation_annotation_java",
    "//ui/android:ui_full_java",

    # Ecosia
    ":java_resources",
    "//components/browser_ui/widget/android:java",
  ]
  resources_package = "org.chromium.chrome.browser.ui.default_browser_promo"
}

# Ecosia: resources
android_resources("java_resources") {
  sources = [
    "java/res_ecosia/drawable/ecosia_button_primary.xml",
    "java/res_ecosia/layout/ecosia_promo_dialog_layout.xml",
  ]

  deps = [
    "//chrome/browser/ui/android/strings:ui_strings_grd",
    "//components/browser_ui/widget/android:java_resources",
    "//ui/android:ui_java_resources",
    "//ui/android:ecosia_ui_java_resources",
  ]
}

robolectric_library("junit") {
  sources = [
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoDepsTest.java",
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoManagerTest.java",
    "java/src/org/chromium/chrome/browser/ui/default_browser_promo/DefaultBrowserPromoUtilsTest.java",
  ]
  deps = [
    ":java",
    "//base:base_java",
    "//base:base_java_test_support",
    "//base:base_junit_test_support",
    "//chrome/browser/flags:java",
    "//third_party/junit",
    "//third_party/mockito:mockito_java",
    "//ui/android:ui_java",
  ]
}
